src/objects/BoothForce_Snapshot__c.object
<CustomObject>
    <description>BoothForce Snapshot; This is for Sarah&apos;s staffing assignments snapshot for various events (Leadership Assembly, Eboard Meetings).</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Division__c</fullName>
        <label>Assigned To Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager__c</fullName>
        <label>Assigned To Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other_FID__c</fullName>
        <label>Assigned To Other - FID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other_Facility__c</fullName>
        <label>Assigned To Other - Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other__c</fullName>
        <label>Assigned To Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Title__c</fullName>
        <label>Assigned To Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_User_Id__c</fullName>
        <label>Assigned To User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Users_Manager__c</fullName>
        <label>Assigned to Users Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoothForce_Event__c</fullName>
        <label>BoothForce Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Description__c</fullName>
        <label>Booth Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Booth_ID__c</fullName>
        <label>Booth ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Name__c</fullName>
        <label>Booth Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Type__c</fullName>
        <label>Booth Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Staffed_Non_UHW__c</fullName>
        <label>Is Staffed Non-UHW</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Staffed__c</fullName>
        <label>Is Staffed</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id__c</fullName>
        <label>Manager_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Shifts_to_be_Staffed__c</fullName>
        <label>Remaining Shifts to be Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Date__c</fullName>
        <label>Shift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shift_End_Time__c</fullName>
        <label>Shift End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shift_Start_Time__c</fullName>
        <label>Shift Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shift_Time_Friendly_Name__c</fullName>
        <label>Shift Time Friendly Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Time_Remain_Shifts_to_be_Staffed__c</fullName>
        <description>Shift Time: Remaining Shifts to be Staffed</description>
        <label>Shift Time Remain Shifts to be Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Time_Total_Shifts_Staffed__c</fullName>
        <description>Shift Time: Total Shifts Staffed</description>
        <label>Shift Time Total Shifts Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Time_Total_Shifts_to_be_Staffed__c</fullName>
        <description>Shift Time: Total Shifts to be Staffed</description>
        <label>Shift Time Total Shifts to be Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staffing_Assignment_ID__c</fullName>
        <label>Staffing Assignment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staffing_Assignment__c</fullName>
        <label>Staffing Assignment #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Shifts_Staffed__c</fullName>
        <label>Total Shifts Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Shifts_to_be_Staffed__c</fullName>
        <label>Total Shifts to be Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Booth_Staffing_Roles_Allowed__c</fullName>
        <label>User Booth Staffing Roles Allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BoothForce Snapshot</label>
    <nameField>
        <displayFormat>BoothForce-{0000}</displayFormat>
        <label>BoothForce Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BoothForce Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>